--- a/ProyectoFinal/pages/Amazonas.html
+++ b/ProyectoFinal/pages/Amazonas.html
@@ -44,7 +44,7 @@
                         <p>La Amazonia se destaca por ser una de las ecorregiones con mayor biodiversidad en el mundo.</p>
                     </div>
                     <div>
-                        <img src="/assets/images/1Amazonas.jpg">
+                        <img src="../assets/images/1Amazonas.jpg">
                     </div>
                 </div>
                 <div class="link">
